--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
      <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAERiqdMTZa6xd_e9xj_JfCF2m3-BB3tTw"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
