--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
   <body>
      <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUI_hqf3GJQ7c80e0rK9aki1fT6kDVuiU&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUI_hqf3GJQ7c80e0rK9aki1fT6kDVuiU&libraries=places"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_MAP_KEY%&libraries=places"></script>
 
     <div id="root"></div>
     <!--
